feat: add Header and Footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,8 @@
     outline: 2px solid black;
     outline-offset: 2px;
   }
+
+  .text-link {
+    @apply underline underline-offset-2 hover:no-underline
+  }
 }
