feat: add features desktop version

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,4 +71,12 @@
   .prose .text-justify {
     text-align: justify;
   }
+
+  .swiper:not(.swiper-initialized).five-items .swiper-wrapper {
+    @apply gap-[50px];
+  }
+
+  .swiper:not(.swiper-initialized).five-items .swiper-wrapper .swiper-slide {
+    @apply w-[calc(20%-40px)];
+  }
 }
