--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,29 +19,6 @@
     color: var(--headings-color, #000000);
   }
 
-  h1 {
-    @apply text-4xl
-  }
-
-  h2 {
-    @apply text-3xl
-  }
-
-  h3 {
-    @apply text-2xl
-  }
-
-  h4 {
-    @apply text-xl
-  }
-
-  h5 {
-    @apply text-lg
-  }
-
-  h6 {
-    @apply text-base
-  }
 
   *:focus-visible {
     outline: 2px solid black;
@@ -62,6 +39,30 @@
 
   .prose {
     color: inherit;
+  }
+
+  .prose h1 {
+    @apply text-4xl sm:text-5xl md:text-7xl
+  }
+
+  .prose h2 {
+    @apply text-4xl sm:text-5xl
+  }
+
+  .prose h3 {
+    @apply text-3xl sm:text-4xl
+  }
+
+  .prose h4 {
+    @apply text-2xl sm:text-3xl
+  }
+
+  .prose h5 {
+    @apply text-xl sm:text-2xl
+  }
+
+  .prose h6 {
+    @apply text-base sm:text-xl
   }
 
   .prose .text-right {
