feat(Oprimization): add basic layout markup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,10 @@
     color: inherit;
   }
 
+  h1, h2, h3, h4, h5, h6 {
+    @apply text-center
+  }
+
   .prose h1 {
     @apply text-4xl sm:text-5xl md:text-7xl
   }
