--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,6 +97,10 @@
     @apply w-full min-[576px]:w-[calc(50%-18px)] sm:w-[calc(33.333%-24px)] min-[1099px]:w-[calc(25%-27px)] min-[1200px]:w-[calc(20%-32px)] min-[1360px]:w-[calc(20%-32px)];
   }
 
+  .swiper:not(.swiper-initialized).features-swiper .swiper-wrapper .swiper-slide:first-child > div {
+    @apply xs:border-blue-700  xs:border-4;
+  }
+
   .input {
     @apply block w-full rounded-md resize-none border-0 py-2 px-4 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:outline focus:outline-blue-700 outline-2 sm:text-sm sm:leading-6
   }
